syntax = "proto3";

package storage;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service StorageServices {
    rpc UpdateCloudApprove(CloudApproveRequest) returns (google.protobuf.Empty);
    rpc DeleteCloudApprove(CloudApproveRequest) returns (google.protobuf.Empty);
}

message Cloud {
    string id = 1;
    string name = 2;
    string url = 3;
    string created_by = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp deleted_at = 6;
}

message CloudApproveRequest {
    repeated string url = 1;
}